{
  "version": 4,
  "terraform_version": "1.9.7",
  "serial": 69,
  "lineage": "7b6801f1-5d4b-5399-b5cc-3fa4a59aa761",
  "resources": [
    {
      "module": "module.adb-lakehouse",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f5db8d12-ebce-4e7d-b62c-6e149c62749b/resourceGroups/adb-lakehouse-rg/providers/Microsoft.Network/networkSecurityGroups/databricks-nsg-data-analytics-portfolio-project-dev",
            "location": "australiasoutheast",
            "name": "databricks-nsg-data-analytics-portfolio-project-dev",
            "resource_group_name": "adb-lakehouse-rg",
            "security_rule": [],
            "tags": {
              "project name": "data project"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.adb-lakehouse-uc-metastore.azurerm_databricks_access_connector.access_connector",
            "module.adb-lakehouse-uc-metastore.azurerm_resource_group.metastore_resource_group",
            "module.adb-lakehouse-uc-metastore.azurerm_role_assignment.unity_catalog",
            "module.adb-lakehouse-uc-metastore.azurerm_storage_account.unity_catalog",
            "module.adb-lakehouse-uc-metastore.azurerm_storage_container.unity_catalog",
            "module.adb-lakehouse-uc-metastore.databricks_metastore.databricks-metastore",
            "module.adb-lakehouse-uc-metastore.databricks_metastore_data_access.access-connector-data-access",
            "module.adb-lakehouse.data.azurerm_resource_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.adb-lakehouse",
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "bgp_route_propagation_enabled": true,
            "id": "/subscriptions/f5db8d12-ebce-4e7d-b62c-6e149c62749b/resourceGroups/adb-lakehouse-rg/providers/Microsoft.Network/routeTables/route-table-data-analytics-portfolio-project-dev",
            "location": "australiasoutheast",
            "name": "route-table-data-analytics-portfolio-project-dev",
            "resource_group_name": "adb-lakehouse-rg",
            "route": [],
            "subnets": [],
            "tags": {
              "project name": "data project"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.adb-lakehouse-uc-metastore.azurerm_databricks_access_connector.access_connector",
            "module.adb-lakehouse-uc-metastore.azurerm_resource_group.metastore_resource_group",
            "module.adb-lakehouse-uc-metastore.azurerm_role_assignment.unity_catalog",
            "module.adb-lakehouse-uc-metastore.azurerm_storage_account.unity_catalog",
            "module.adb-lakehouse-uc-metastore.azurerm_storage_container.unity_catalog",
            "module.adb-lakehouse-uc-metastore.databricks_metastore.databricks-metastore",
            "module.adb-lakehouse-uc-metastore.databricks_metastore_data_access.access-connector-data-access",
            "module.adb-lakehouse.data.azurerm_resource_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.adb-lakehouse",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.26.1.128/25"
            ],
            "default_outbound_access_enabled": true,
            "delegation": [
              {
                "name": "databricks-private-subnet-delegation",
                "service_delegation": [
                  {
                    "actions": [
                      "Microsoft.Network/virtualNetworks/subnets/join/action",
                      "Microsoft.Network/virtualNetworks/subnets/prepareNetworkPolicies/action",
                      "Microsoft.Network/virtualNetworks/subnets/unprepareNetworkPolicies/action"
                    ],
                    "name": "Microsoft.Databricks/workspaces"
                  }
                ]
              }
            ],
            "id": "/subscriptions/f5db8d12-ebce-4e7d-b62c-6e149c62749b/resourceGroups/adb-lakehouse-rg/providers/Microsoft.Network/virtualNetworks/VNET-data-analytics-portfolio-project-dev/subnets/private-subnet-databricks-ws",
            "name": "private-subnet-databricks-ws",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "adb-lakehouse-rg",
            "virtual_network_name": "VNET-data-analytics-portfolio-project-dev"
          },
          "dependencies": [
            "module.adb-lakehouse-uc-metastore.azurerm_databricks_access_connector.access_connector",
            "module.adb-lakehouse-uc-metastore.azurerm_resource_group.metastore_resource_group",
            "module.adb-lakehouse-uc-metastore.azurerm_role_assignment.unity_catalog",
            "module.adb-lakehouse-uc-metastore.azurerm_storage_account.unity_catalog",
            "module.adb-lakehouse-uc-metastore.azurerm_storage_container.unity_catalog",
            "module.adb-lakehouse-uc-metastore.databricks_metastore.databricks-metastore",
            "module.adb-lakehouse-uc-metastore.databricks_metastore_data_access.access-connector-data-access",
            "module.adb-lakehouse.azurerm_virtual_network.this",
            "module.adb-lakehouse.data.azurerm_resource_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.adb-lakehouse",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.26.1.0/25"
            ],
            "default_outbound_access_enabled": true,
            "delegation": [
              {
                "name": "databricks-public-subnet-delegation",
                "service_delegation": [
                  {
                    "actions": [
                      "Microsoft.Network/virtualNetworks/subnets/join/action",
                      "Microsoft.Network/virtualNetworks/subnets/prepareNetworkPolicies/action",
                      "Microsoft.Network/virtualNetworks/subnets/unprepareNetworkPolicies/action"
                    ],
                    "name": "Microsoft.Databricks/workspaces"
                  }
                ]
              }
            ],
            "id": "/subscriptions/f5db8d12-ebce-4e7d-b62c-6e149c62749b/resourceGroups/adb-lakehouse-rg/providers/Microsoft.Network/virtualNetworks/VNET-data-analytics-portfolio-project-dev/subnets/public-subnet-databricks-ws",
            "name": "public-subnet-databricks-ws",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "adb-lakehouse-rg",
            "virtual_network_name": "VNET-data-analytics-portfolio-project-dev"
          },
          "dependencies": [
            "module.adb-lakehouse-uc-metastore.azurerm_databricks_access_connector.access_connector",
            "module.adb-lakehouse-uc-metastore.azurerm_resource_group.metastore_resource_group",
            "module.adb-lakehouse-uc-metastore.azurerm_role_assignment.unity_catalog",
            "module.adb-lakehouse-uc-metastore.azurerm_storage_account.unity_catalog",
            "module.adb-lakehouse-uc-metastore.azurerm_storage_container.unity_catalog",
            "module.adb-lakehouse-uc-metastore.databricks_metastore.databricks-metastore",
            "module.adb-lakehouse-uc-metastore.databricks_metastore_data_access.access-connector-data-access",
            "module.adb-lakehouse.azurerm_virtual_network.this",
            "module.adb-lakehouse.data.azurerm_resource_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.adb-lakehouse",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f5db8d12-ebce-4e7d-b62c-6e149c62749b/resourceGroups/adb-lakehouse-rg/providers/Microsoft.Network/virtualNetworks/VNET-data-analytics-portfolio-project-dev/subnets/private-subnet-databricks-ws",
            "network_security_group_id": "/subscriptions/f5db8d12-ebce-4e7d-b62c-6e149c62749b/resourceGroups/adb-lakehouse-rg/providers/Microsoft.Network/networkSecurityGroups/databricks-nsg-data-analytics-portfolio-project-dev",
            "subnet_id": "/subscriptions/f5db8d12-ebce-4e7d-b62c-6e149c62749b/resourceGroups/adb-lakehouse-rg/providers/Microsoft.Network/virtualNetworks/VNET-data-analytics-portfolio-project-dev/subnets/private-subnet-databricks-ws"
          },
          "dependencies": [
            "module.adb-lakehouse-uc-metastore.azurerm_databricks_access_connector.access_connector",
            "module.adb-lakehouse-uc-metastore.azurerm_resource_group.metastore_resource_group",
            "module.adb-lakehouse-uc-metastore.azurerm_role_assignment.unity_catalog",
            "module.adb-lakehouse-uc-metastore.azurerm_storage_account.unity_catalog",
            "module.adb-lakehouse-uc-metastore.azurerm_storage_container.unity_catalog",
            "module.adb-lakehouse-uc-metastore.databricks_metastore.databricks-metastore",
            "module.adb-lakehouse-uc-metastore.databricks_metastore_data_access.access-connector-data-access",
            "module.adb-lakehouse.azurerm_network_security_group.this",
            "module.adb-lakehouse.azurerm_subnet.private",
            "module.adb-lakehouse.azurerm_virtual_network.this",
            "module.adb-lakehouse.data.azurerm_resource_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.adb-lakehouse",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f5db8d12-ebce-4e7d-b62c-6e149c62749b/resourceGroups/adb-lakehouse-rg/providers/Microsoft.Network/virtualNetworks/VNET-data-analytics-portfolio-project-dev/subnets/public-subnet-databricks-ws",
            "network_security_group_id": "/subscriptions/f5db8d12-ebce-4e7d-b62c-6e149c62749b/resourceGroups/adb-lakehouse-rg/providers/Microsoft.Network/networkSecurityGroups/databricks-nsg-data-analytics-portfolio-project-dev",
            "subnet_id": "/subscriptions/f5db8d12-ebce-4e7d-b62c-6e149c62749b/resourceGroups/adb-lakehouse-rg/providers/Microsoft.Network/virtualNetworks/VNET-data-analytics-portfolio-project-dev/subnets/public-subnet-databricks-ws"
          },
          "dependencies": [
            "module.adb-lakehouse-uc-metastore.azurerm_databricks_access_connector.access_connector",
            "module.adb-lakehouse-uc-metastore.azurerm_resource_group.metastore_resource_group",
            "module.adb-lakehouse-uc-metastore.azurerm_role_assignment.unity_catalog",
            "module.adb-lakehouse-uc-metastore.azurerm_storage_account.unity_catalog",
            "module.adb-lakehouse-uc-metastore.azurerm_storage_container.unity_catalog",
            "module.adb-lakehouse-uc-metastore.databricks_metastore.databricks-metastore",
            "module.adb-lakehouse-uc-metastore.databricks_metastore_data_access.access-connector-data-access",
            "module.adb-lakehouse.azurerm_network_security_group.this",
            "module.adb-lakehouse.azurerm_subnet.public",
            "module.adb-lakehouse.azurerm_virtual_network.this",
            "module.adb-lakehouse.data.azurerm_resource_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.adb-lakehouse",
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f5db8d12-ebce-4e7d-b62c-6e149c62749b/resourceGroups/adb-lakehouse-rg/providers/Microsoft.Network/virtualNetworks/VNET-data-analytics-portfolio-project-dev/subnets/private-subnet-databricks-ws",
            "route_table_id": "/subscriptions/f5db8d12-ebce-4e7d-b62c-6e149c62749b/resourceGroups/adb-lakehouse-rg/providers/Microsoft.Network/routeTables/route-table-data-analytics-portfolio-project-dev",
            "subnet_id": "/subscriptions/f5db8d12-ebce-4e7d-b62c-6e149c62749b/resourceGroups/adb-lakehouse-rg/providers/Microsoft.Network/virtualNetworks/VNET-data-analytics-portfolio-project-dev/subnets/private-subnet-databricks-ws"
          },
          "dependencies": [
            "module.adb-lakehouse-uc-metastore.azurerm_databricks_access_connector.access_connector",
            "module.adb-lakehouse-uc-metastore.azurerm_resource_group.metastore_resource_group",
            "module.adb-lakehouse-uc-metastore.azurerm_role_assignment.unity_catalog",
            "module.adb-lakehouse-uc-metastore.azurerm_storage_account.unity_catalog",
            "module.adb-lakehouse-uc-metastore.azurerm_storage_container.unity_catalog",
            "module.adb-lakehouse-uc-metastore.databricks_metastore.databricks-metastore",
            "module.adb-lakehouse-uc-metastore.databricks_metastore_data_access.access-connector-data-access",
            "module.adb-lakehouse.azurerm_route_table.this",
            "module.adb-lakehouse.azurerm_subnet.private",
            "module.adb-lakehouse.azurerm_virtual_network.this",
            "module.adb-lakehouse.data.azurerm_resource_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.adb-lakehouse",
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f5db8d12-ebce-4e7d-b62c-6e149c62749b/resourceGroups/adb-lakehouse-rg/providers/Microsoft.Network/virtualNetworks/VNET-data-analytics-portfolio-project-dev/subnets/public-subnet-databricks-ws",
            "route_table_id": "/subscriptions/f5db8d12-ebce-4e7d-b62c-6e149c62749b/resourceGroups/adb-lakehouse-rg/providers/Microsoft.Network/routeTables/route-table-data-analytics-portfolio-project-dev",
            "subnet_id": "/subscriptions/f5db8d12-ebce-4e7d-b62c-6e149c62749b/resourceGroups/adb-lakehouse-rg/providers/Microsoft.Network/virtualNetworks/VNET-data-analytics-portfolio-project-dev/subnets/public-subnet-databricks-ws"
          },
          "dependencies": [
            "module.adb-lakehouse-uc-metastore.azurerm_databricks_access_connector.access_connector",
            "module.adb-lakehouse-uc-metastore.azurerm_resource_group.metastore_resource_group",
            "module.adb-lakehouse-uc-metastore.azurerm_role_assignment.unity_catalog",
            "module.adb-lakehouse-uc-metastore.azurerm_storage_account.unity_catalog",
            "module.adb-lakehouse-uc-metastore.azurerm_storage_container.unity_catalog",
            "module.adb-lakehouse-uc-metastore.databricks_metastore.databricks-metastore",
            "module.adb-lakehouse-uc-metastore.databricks_metastore_data_access.access-connector-data-access",
            "module.adb-lakehouse.azurerm_route_table.this",
            "module.adb-lakehouse.azurerm_subnet.public",
            "module.adb-lakehouse.azurerm_virtual_network.this",
            "module.adb-lakehouse.data.azurerm_resource_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.adb-lakehouse",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.26.1.0/24"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "d3360fad-92b3-4a50-a692-e983a55e9195",
            "id": "/subscriptions/f5db8d12-ebce-4e7d-b62c-6e149c62749b/resourceGroups/adb-lakehouse-rg/providers/Microsoft.Network/virtualNetworks/VNET-data-analytics-portfolio-project-dev",
            "location": "australiasoutheast",
            "name": "VNET-data-analytics-portfolio-project-dev",
            "resource_group_name": "adb-lakehouse-rg",
            "tags": {
              "project name": "data project"
            }
          },
          "dependencies": [
            "module.adb-lakehouse-uc-metastore.azurerm_databricks_access_connector.access_connector",
            "module.adb-lakehouse-uc-metastore.azurerm_resource_group.metastore_resource_group",
            "module.adb-lakehouse-uc-metastore.azurerm_role_assignment.unity_catalog",
            "module.adb-lakehouse-uc-metastore.azurerm_storage_account.unity_catalog",
            "module.adb-lakehouse-uc-metastore.azurerm_storage_container.unity_catalog",
            "module.adb-lakehouse-uc-metastore.databricks_metastore.databricks-metastore",
            "module.adb-lakehouse-uc-metastore.databricks_metastore_data_access.access-connector-data-access",
            "module.adb-lakehouse.data.azurerm_resource_group.this"
          ]
        }
      ]
    }
  ]
}